cmake_minimum_required(VERSION 2.8)
SET(BULLET_VERSION 1.0)

find_package(SWIG REQUIRED)
find_package(Java REQUIRED)
find_package(JNI REQUIRED)
include(UseJava)
include(UseSWIG)
include_directories(${JNI_INCLUDE_DIRS})


SET(SWIG_ROOT ${CMAKE_CURRENT_BINARY_DIR}/swig-src )
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC" )
SET(CMAKE_JNI_TARGET TRUE)
SET(CMAKE_JAVA_INCLUDE_PATH lib/guava-25.1-jre.jar lib/slf4j-api-1.7.12.jar lib/TeraMath-1.4.0.jar lib/trove4j-3.0.3.jar)

set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/swig-src PROPERTIES GENERATED TRUE)

include_directories(jni/src/bullet)
include_directories(jni/src/custom)
include_directories(jni/src/extras)
include_directories(jni/jni-headers)
include_directories(jni/src/extras/Serialize)

add_subdirectory(jni/src/bullet)
add_subdirectory(jni/src/extras/Serialize)
add_subdirectory(jni/src/custom)


if(WIN32)
    include_directories(jni/jni-headers/win32)
elseif(APPLE)
    include_directories(jni/jni-headers/mac)
elseif(UNIX AND NOT APPLE)
    include_directories(jni/jni-headers/linux)
endif()

SET(UseSWIG_MODULE_VERSION 2)

SET_SOURCE_FILES_PROPERTIES(jni/swig/collision/collision.i  PROPERTIES CPLUSPLUS ON )
SET_SOURCE_FILES_PROPERTIES(jni/swig/linearmath/linearmath.i SWIG_FLAGS  PROPERTIES CPLUSPLUS ON )
SET_SOURCE_FILES_PROPERTIES(jni/swig/dynamics/dynamics.i SWIG_FLAGS  PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(jni/swig/softbody/softbody.i SWIG_FLAGS PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(jni/swig/extras/extras.i SWIG_FLAGS PROPERTIES CPLUSPLUS ON)

foreach(SWIG_MODULE collision;linearmath;dynamics;softbody;extras)
    SET(CMAKE_SWIG_FLAGS -c++ -package org.terasology.bullet.${SWIG_MODULE} -fvirtual -DBT_NO_PROFILE  )
    SET(SWIG_OUTFILE_DIR ${SWIG_ROOT}/${SWIG_MODULE}/)
    SET(CMAKE_SWIG_OUTDIR ${SWIG_ROOT}/${SWIG_MODULE}/org/terasology/physics/${SWIG_MODULE})
    SWIG_ADD_LIBRARY(BulletSwig${SWIG_MODULE} LANGUAGE java SOURCES jni/swig/${SWIG_MODULE}/${SWIG_MODULE}.i )
    SWIG_LINK_LIBRARIES(BulletSwig${SWIG_MODULE} GdxCustom BulletWorldImporter BulletCollision BulletDynamics BulletSoftBody LinearMath  ${JAVA_LIBRARY})
endforeach()

message(STATUS ${BulletSwigdynamics})

file(GLOB_RECURSE JAVA_SWIG_SOURCE "${SWIG_ROOT}/*.java")

SET(JAVA_SWIG_SOURCE
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/AllHitsRayResultCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/BroadphaseNativeTypes.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/bt32BitAxisSweep3.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/BT_BOX_BOX_TRANSFORM_CACHE.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/BT_QUANTIZED_BVH_NODE.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btAABB.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btActivatingCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btAxisSweep3.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btAxisSweep3InternalInt.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btAxisSweep3InternalShort.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBox2dBox2dCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBox2dShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBoxBoxCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBoxBoxDetector.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBoxShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBroadphaseAabbCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBroadphaseInterface.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBroadphasePair.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBroadphasePairArray.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBroadphasePairSortPredicate.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBroadphaseProxy.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBroadphaseRayCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBU_Simplex1to4.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBvhSubtreeInfo.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBvhSubtreeInfoData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBvhTree.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btBvhTriangleMeshShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCapsuleShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCapsuleShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCapsuleShapeX.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCapsuleShapeZ.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCharIndexTripletData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionAlgorithmConstructionInfo.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionAlgorithmCreateFunc.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionConfiguration.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionDispatcher.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionObject.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionObjectArray.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionObjectConstArray.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionObjectDoubleData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionObjectFloatData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionObjectWrapper.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCollisionWorld.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCompoundCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCompoundCompoundCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCompoundShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCompoundShapeChild.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCompoundShapeChildData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCompoundShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConcaveShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConeShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConeShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConeShapeX.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConeShapeZ.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConstraintRow.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btContactArray.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btContactManifoldTypes.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btContactPointFlags.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btContinuousConvexCollision.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvex2dConvex2dAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvex2dShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexCast.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexConcaveCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexConvexAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexHullShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexHullShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexInternalAabbCachingShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexInternalShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexInternalShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexPenetrationDepthSolver.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexPlaneCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexPointCloudShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexPolyhedron.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexTriangleCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btConvexTriangleMeshShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCylinderShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCylinderShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCylinderShapeX.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btCylinderShapeZ.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDbvt.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDbvtAabbMm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDbvtBroadphase.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDbvtNode.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDbvtProxy.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDefaultCollisionConfiguration.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDefaultCollisionConstructionInfo.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDiscreteCollisionDetectorInterface.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDispatcher.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btDispatcherInfo.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btElement.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btEmptyAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btEmptyShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btFace.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGenericMemoryPool.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGenericPoolAllocator.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGhostObject.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGhostPairCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGImpactBvh.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGImpactCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGImpactCompoundShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGImpactMeshShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGImpactMeshShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGImpactMeshShapePart.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGImpactQuantizedBvh.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGImpactShapeInterface.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGjkConvexCast.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGjkEpaPenetrationDepthSolver.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGjkEpaSolver2.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btGjkPairDetector.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btHashedOverlappingPairCache.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btHashedSimplePairCache.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btHeightfieldTerrainShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btIndexedMesh.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btInternalEdgeAdjustFlags.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btInternalTriangleIndexCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btIntIndexData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btManifoldPoint.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btManifoldResult.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMaterial.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMaterialProperties.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMeshPartData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMinkowskiPenetrationDepthSolver.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMinkowskiSumShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMultimaterialTriangleMeshShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMultiSapBroadphase.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMultiSphereShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btMultiSphereShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btNodeOverlapCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btNullPairCache.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btOptimizedBvh.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btOptimizedBvhNode.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btOptimizedBvhNodeDoubleData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btOptimizedBvhNodeFloatData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btOverlapCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btOverlapFilterCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btOverlappingPairCache.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btOverlappingPairCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPairCachingGhostObject.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPairSet.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPersistentManifold.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPersistentManifoldArray.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPointCollector.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPolyhedralContactClipping.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPolyhedralConvexAabbCachingShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPolyhedralConvexShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPositionAndRadius.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPrimitiveManagerBase.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btPrimitiveTriangle.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btQuantizedBvh.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btQuantizedBvhDoubleData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btQuantizedBvhFloatData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btQuantizedBvhNode.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btQuantizedBvhNodeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btQuantizedBvhTree.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btScaledBvhTriangleMeshShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btScaledTriangleMeshShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btShapeHull.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btShortIntIndexData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btShortIntIndexTripletData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSimpleBroadphase.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSimpleBroadphaseProxy.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSimplePair.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSimulationIslandManager.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSortedOverlappingPairCache.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSphereBoxCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSphereShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSphereSphereCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSphereTriangleCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btStaticPlaneShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btStaticPlaneShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btStorageResult.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btStridingMeshInterface.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btStridingMeshInterfaceData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSubSimplexClosestResult.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btSubsimplexConvexCast.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTetrahedronShapeEx.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangle.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleBuffer.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleConvexcastCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleIndexVertexArray.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleIndexVertexMaterialArray.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleInfo.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleInfoData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleInfoMap.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleInfoMapData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleMesh.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleMeshShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleMeshShapeData.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleRaycastCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btTriangleShapeEx.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btUniformScalingShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btUnionFind.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btUsageBitfield.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btVector3i.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btVoronoiSimplexSolver.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btVoxelCollisionAlgorithm.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btVoxelCollisionInfo.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btVoxelContentProvider.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btVoxelInfo.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/btVoxelShape.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ClosestConvexResultCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ClosestNotMeConvexResultCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ClosestNotMeRayResultCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ClosestRayResultCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/Collision.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/CollisionConstants.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/CollisionJNI.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/CollisionObjectWrapper.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ContactCache.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ContactCallbackEvent.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ContactListener.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ContactResultCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ConvexResultCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/CustomCollisionDispatcher.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/eBT_PLANE_INTERSECTION_TYPE.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/eGIMPACT_SHAPE_TYPE.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GdxCollisionObjectBridge.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GIM_BVH_DATA.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GIM_BVH_DATA_ARRAY.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GIM_BVH_TREE_NODE.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GIM_BVH_TREE_NODE_ARRAY.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GIM_CONTACT.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GIM_PAIR.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GIM_QUANTIZED_BVH_NODE_ARRAY.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/GIM_TRIANGLE_CONTACT.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/ICollide.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/LocalConvexResult.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/LocalRayResult.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/LocalShapeInfo.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/PHY_ScalarType.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/RayResultCallback.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SphereTriangleDetector.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btBroadphaseInterface_p_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btBvhSubtreeInfo_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btDbvt__sStkNN_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btDbvt__sStkNPS_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btDbvtNode_const_p_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btFace_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btIndexedMesh_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btQuantizedBvhNode_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btSimplePair_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_btVoxelInfo_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btAlignedObjectArrayT_int_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_btSerializer.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_f_p_q_const__btCollisionShape_p_q_const__btCollisionShape__bool.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_f_r_btBroadphasePair_r_btCollisionDispatcher_r_q_const__btDispatcherInfo__void.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_f_r_btManifoldPoint_p_q_const__btCollisionObjectWrapper_int_int_p_q_const__btCollisionObjectWrapper_int_int__bool.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_float.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_int.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_p_btCollisionObject.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_p_btDbvtNode.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_p_btDbvtProxy.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_p_btGenericMemoryPool.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_p_btPersistentManifold.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_p_btVector3.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_p_unsigned_char.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_PHY_ScalarType.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_size_t.java
        ${SWIG_ROOT}/collision/org/terasology/physics/collision/SWIGTYPE_p_unsigned_int.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/bt6DofFlags.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/bt6DofFlags2.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btActionInterface.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btAngularLimit.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btCharacterControllerInterface.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btConeTwistConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btConeTwistConstraintData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btConeTwistConstraintDoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btConeTwistFlags.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btConstraintParams.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btConstraintSetting.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btConstraintSolver.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btConstraintSolverType.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btContactConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btContactSolverInfo.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btContactSolverInfoData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btContactSolverInfoDoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btContactSolverInfoFloatData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btDefaultVehicleRaycaster.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btDiscreteDynamicsWorld.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btDynamicsWorld.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btDynamicsWorldDoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btDynamicsWorldFloatData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btDynamicsWorldType.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btFixedConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofConstraintData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofConstraintDoubleData2.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofSpring2Constraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofSpring2ConstraintData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofSpring2ConstraintDoubleData2.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofSpringConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofSpringConstraintData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btGeneric6DofSpringConstraintDoubleData2.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btHinge2Constraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btHingeAccumulatedAngleConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btHingeConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btHingeConstraintDoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btHingeConstraintDoubleData2.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btHingeConstraintFloatData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btHingeFlags.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btJacobianEntry.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btJointFeedback.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btKinematicCharacterController.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btPoint2PointConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btPoint2PointConstraintDoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btPoint2PointConstraintDoubleData2.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btPoint2PointConstraintFloatData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btPoint2PointFlags.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btRaycastVehicle.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btRigidBody.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btRigidBodyDoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btRigidBodyFlags.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btRigidBodyFloatData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btRotationalLimitMotor.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btRotationalLimitMotor2.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSequentialImpulseConstraintSolver.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSimpleDynamicsWorld.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSliderConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSliderConstraintData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSliderConstraintDoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSliderFlags.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSolve2LinearConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSolverBody.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSolverConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btSolverMode.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btTranslationalLimitMotor.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btTranslationalLimitMotor2.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btTypedConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btTypedConstraintData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btTypedConstraintDoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btTypedConstraintFloatData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btTypedConstraintType.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btUniversalConstraint.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btVehicleRaycaster.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btWheelInfo.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/btWheelInfoConstructionInfo.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/CustomActionInterface.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/Dynamics.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/DynamicsConstants.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/DynamicsJNI.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/FilterableVehicleRaycaster.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/InternalTickCallback.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/RotateOrder.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_btAlignedObjectArrayT_btSolverConstraint_t.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_btAlignedObjectArrayT_btWheelInfo_t.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_btMatrix3x3DoubleData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_btMatrix3x3FloatData.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_btSerializer.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_f_p_btDynamicsWorld_float__void.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_f_r_btSolverBody_r_btSolverBody_r_q_const__btSolverConstraint__btSimdScalar.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_float.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_p_btCollisionObject.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_p_btPersistentManifold.java
        ${SWIG_ROOT}/dynamics/org/terasology/physics/dynamics/SWIGTYPE_p_p_btTypedConstraint.java
        ${SWIG_ROOT}/extras/org/terasology/physics/extras/btBulletWorldImporter.java
        ${SWIG_ROOT}/extras/org/terasology/physics/extras/btStringArray.java
        ${SWIG_ROOT}/extras/org/terasology/physics/extras/btWorldImporter.java
        ${SWIG_ROOT}/extras/org/terasology/physics/extras/Extras.java
        ${SWIG_ROOT}/extras/org/terasology/physics/extras/ExtrasJNI.java
        ${SWIG_ROOT}/extras/org/terasology/physics/extras/SWIGTYPE_p_bParse__btBulletFile.java
        ${SWIG_ROOT}/extras/org/terasology/physics/extras/SWIGTYPE_p_btGearConstraint.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btAngleCompareFunc.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btBlock.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btClock.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btConvexHullComputer.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btConvexSeparatingDistanceUtil.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btDefaultMotionState.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btGEN_Link.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btGEN_List.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btGeometryUtil.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btHashInt.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btHashPtr.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btHashString.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btIDebugDraw.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btMotionState.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btPlane.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btPoolAllocator.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btQuaternion.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btQuaternionDoubleData.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btQuaternionFloatData.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btScalarArray.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btStackAlloc.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btTransform.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btTransformDoubleData.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btTransformFloatData.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btTransformUtil.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btTypedObject.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btVector3.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btVector3Array.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btVector3DoubleData.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btVector3FloatData.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/btVector4.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/ConvexH.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/GrahamVector3.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/HullDesc.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/HullError.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/HullFlag.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/HullLibrary.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/HullResult.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/int4.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/LinearMath.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/LinearMathConstants.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/LinearMathJNI.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/PHullResult.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_btAlignedObjectArrayT_btConvexHullComputer__Edge_t.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_btAlignedObjectArrayT_btPlane_t.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_btAlignedObjectArrayT_ConvexH__HalfEdge_t.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_btAlignedObjectArrayT_GrahamVector3_t.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_btAlignedObjectArrayT_int_t.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_btAlignedObjectArrayT_unsigned_int_t.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_btMatrix3x3DoubleData.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_btMatrix3x3FloatData.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_f_p_void__void.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_f_size_t__p_void.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_f_size_t_int__p_void.java
        ${SWIG_ROOT}/linearmath/org/terasology/physics/linearmath/SWIGTYPE_p_float.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btCPUVertexBufferDescriptor.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btDefaultSoftBodySolver.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btEigen.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBody.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodyCollisionShape.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodyConcaveCollisionAlgorithm.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodyFloatData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodyHelpers.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodyJointData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodyRigidBodyCollisionConfiguration.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodySolver.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodySolverOutput.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodyTriangleCallback.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftBodyWorldInfo.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftClusterCollisionShape.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftColliders.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftJointBodyType.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftRigidCollisionAlgorithm.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftRigidDynamicsWorld.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSoftSoftCollisionAlgorithm.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btSparseSdf3.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btTriIndex.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/btVertexBufferDescriptor.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/fDrawFlags.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/Softbody.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftBodyClusterData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftBodyConfigData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftbodyConstants.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftBodyFaceData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftbodyJNI.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftBodyLinkData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftBodyMaterialData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftBodyNodeData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftBodyPoseData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftBodyTetraData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SoftRigidAnchorData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_a_3_1__a_3_1__float.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_bool_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Anchor_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Cluster_p_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__ePSolver____t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__eVSolver____t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Face_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Joint_p_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Link_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Material_p_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Node_p_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Node_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Note_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__RContact_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__SContact_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody__Tetra_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSoftBody_p_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_btSparseSdfT_3_t__Cell_p_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btAlignedObjectArrayT_int_t.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btMatrix3x3.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btMatrix3x3FloatData.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_btSoftBody__eFeature___.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_f_p_btSoftBody_float_float__void.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_float.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_int.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_p_btSoftBody.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_p_btSoftBody__Node.java
        ${SWIG_ROOT}/softbody/org/terasology/physics/softbody/SWIGTYPE_p_p_SoftBodyMaterialData.java)

file(GLOB_RECURSE JAVA_SOURCE "src/*.java")

add_jar(
        TerraBullet
        SOURCES
        ${JAVA_SOURCE}
        ${JAVA_SWIG_SOURCE}

)
add_dependencies(TerraBullet BulletSwigcollision
        BulletSwigdynamics
        BulletSwigsoftbody
        BulletSwigextras)
#ADD_DEPENDENCIES(TerraBullet )


SET(SWIG_HDRS
    ${SWIG_ROOT}/collision/collisionJAVA_wrap.h
    ${SWIG_ROOT}/dynamics/dynamicsJAVA_wrap.h
    ${SWIG_ROOT}/extras/extrasJAVA_wrap.h
    ${SWIG_ROOT}/linearmath/linearmathJAVA_wrap.h
    ${SWIG_ROOT}/softbody/softbodyJAVA_wrap.h)

SET(SWIG_SRCS
        ${SWIG_ROOT}/collision/collisionJAVA_wrap.cxx
        ${SWIG_ROOT}/dynamics/dynamicsJAVA_wrap.cxx
        ${SWIG_ROOT}/extras/extrasJAVA_wrap.cxx
        ${SWIG_ROOT}/linearmath/linearmathJAVA_wrap.cxx
        ${SWIG_ROOT}/softbody/softbodyJAVA_wrap.cxx)

add_library(combined SHARED  ${SWIG_HDRS} ${SWIG_SRCS})
set_target_properties(combined PROPERTIES OUTPUT_NAME "TerraBullet64")
target_link_libraries(combined GdxCustom LinearMath BulletWorldImporter BulletCollision BulletDynamics BulletSoftBody )